--- a/src/components/sign-in-form/index.astro
+++ b/src/components/sign-in-form/index.astro
@@ -35,7 +35,7 @@ const idPrefix="sign-in"
         <Checkbox client:only="solid-js" id='private-device' name='private-device' idPrefix={idPrefix}>
             <p class='font-light text-xs tracking-wider pl-6'>Keep me signed in on this device for easier shopping next time.</p>
         </Checkbox>
-        <input type='submit' disabled value='Sign In' class={`${submitBtnClass} turnstile-check enabled:mouse:hover:bg-black enabled:mouse:hover:border-black disabled:cursor-not-allowed`} />
+        <input type='submit' disabled value='Sign In' class={`${submitBtnClass} enabled:mouse:hover:bg-black enabled:mouse:hover:border-black disabled:cursor-not-allowed`} />
     </form>
 </div>
 
