--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -247,6 +247,7 @@ import {
 cartHasItems,
 memberTotalToPay,
 shoppingBagLoaded,
+turnstilePassed,
 } from "@stores"
 
 declare global {
@@ -313,6 +314,7 @@ window.onloadTurnstileCallback = () => {
       const btnToCheck = document.getElementsByClassName('turnstile-check') as HTMLCollectionOf<HTMLInputElement>
       const len = btnToCheck.length
       for (let i=0; i<len; i++) btnToCheck.item(i).disabled = false
+      turnstilePassed.set(true)
     },
   });
 }
