--- a/src/components/checkout/guest/email-password.astro
+++ b/src/components/checkout/guest/email-password.astro
@@ -1,6 +1,7 @@
 ---
 import Checkbox from "@components/input-fields/checkbox"
 import TextInput from "@components/input-fields/text-input"
+import { acceptMembership } from "@misc/env-vars"
 
 const encodedPathname = encodeURIComponent(Astro.url.pathname)
 ---
@@ -24,6 +25,7 @@ const encodedPathname = encodeURIComponent(Astro.url.pathname)
     client:only="solid-js"
     maxLength={100}
 />
+{acceptMembership && <>
 <Checkbox id="guest-sign-up" name="guest-sign-up" client:only="solid-js">
     <p class='font-light text-xs tracking-wider pl-6'>
         <strong>Sign up as a member</strong> (Optional)<br /><a href="/perks" target="_blank" rel="noopener noreferrer" class="underline mouse:hover:decoration-2 mouse:hover:font-normal">View benefits</a>
@@ -40,6 +42,7 @@ const encodedPathname = encodeURIComponent(Astro.url.pathname)
     pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!?<>\\/\\@#$%\\^&\\*\\(\\)~\\=\\-_\\+\\.,])[a-zA-Z0-9!?<>\\/\\@#$%\\^&\\*\\(\\)~\\=\\-_\\+\\.,]{8,20}$"
     client:only="solid-js"
 />
+</>}
 
 <script>
     import { checkoutGuestSignUp } from "@stores"
