--- a/src/pages/account/profile.astro
+++ b/src/pages/account/profile.astro
@@ -7,8 +7,8 @@ import EditorContainer from '@components/account-profile/editor-container.astro'
 import EditorPersonalInfo from '@components/account-profile/editor-personal-info.astro';
 import EditorPassword from '@components/account-profile/editor-password.astro';
 import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
-// import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
+import { acceptMembership } from '@misc/env-vars';
 
 interface IApiResponse {
     firstName:string;
@@ -17,6 +17,8 @@ interface IApiResponse {
     email:string;
     subscribed:boolean;
 }
+
+if (!acceptMembership) return new Response(null,{status:404})
 
 const isProduction = FM_ENV_MODE === 'production'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
