--- a/src/components/layout/header/index.astro
+++ b/src/components/layout/header/index.astro
@@ -9,6 +9,7 @@ import ShoppingBagSidebar from './shopping-bag-sidebar.astro'
 import type { IShoppingBagSidebarProp } from '@misc'
 import Logo from '@components/logo.astro'
 import TextCarousel from './text-carousel'
+import { acceptMembership } from '@misc/env-vars'
 
 interface Props {
   signedIn:boolean;
@@ -30,9 +31,9 @@ const isCheckoutPage = Astro.url.pathname === '/checkout'
             <label for="menu-sidebar-checkbox" id="menu-icon-button" class="cursor-pointer focus:outline-none h-full px-1 py-2 -ml-3 md:px-2 md:py-4 md:-ml-2">
                 <HamburgerIcon />
             </label>
-            <button class="focus:outline-none h-full px-1 py-2 md:px-2 md:py-4 invisible">
+            <!-- <button class="focus:outline-none h-full px-1 py-2 md:px-2 md:py-4 invisible">
                 <HamburgerIcon />
-            </button>
+            </button> -->
         </div>
         <a href="/" class=`py-2 xs:py-3 w-[140px] md:w-[162px] ${isCheckoutPage ? 'flex flex-col justify-center h-10 md:h-12' : ''}`>
             <Logo className='h-[16.62px] md:h-[19.22px]' />
@@ -51,7 +52,7 @@ const isCheckoutPage = Astro.url.pathname === '/checkout'
             </ul>
         </nav>
         <div class={isCheckoutPage ? 'hidden' : 'flex'}>
-            {!!showUserIcon && <label for="user-sidebar-checkbox" id="user-sidebar-icon-button" class={`focus:outline-none h-full py-2 md:py-4 ${!!shoppingBagProp ? 'px-1 md:px-2' : 'px-1 md:px-2 -mr-3 md:-mr-2'}`}>
+            {acceptMembership && !!showUserIcon && <label for="user-sidebar-checkbox" id="user-sidebar-icon-button" class={`focus:outline-none h-full py-2 md:py-4 ${!!shoppingBagProp ? 'px-1 md:px-2' : 'px-1 md:px-2 -mr-3 md:-mr-2'}`}>
                 <UserIcon className="h-6 w-6 xs:h-8 xs:w-8 stroke-[0.2rem] xs:stroke-[0.15rem] stroke-black fill-none" />
             </label>}
             {!!shoppingBagProp && <label for="shopping-bag-sidebar-checkbox" id="shopping-bag-sidebar-icon-button" class="focus:outline-none h-full px-1 md:px-2 py-2 md:py-4 -mr-3 md:-mr-2">
@@ -61,7 +62,7 @@ const isCheckoutPage = Astro.url.pathname === '/checkout'
     </div>
 </header>
 
-{showUserIcon && <UserSidebar {...{showUserIcon,firstName,signedIn}} />}
+{acceptMembership && !!showUserIcon && <UserSidebar {...{showUserIcon,firstName,signedIn}} />}
 {!!shoppingBagProp && <ShoppingBagSidebar props={shoppingBagProp} />}
 <MenuSidebar />
 
