--- a/src/pages/account/edit-address.astro
+++ b/src/pages/account/edit-address.astro
@@ -5,12 +5,15 @@ import EditAddressForm from "@components/account-addresses/edit-address-form.ast
 import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
 // import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
+import { acceptMembership } from "@misc/env-vars";
 
 interface IApiResponse {
     address:IUserAddress;
     countries:ICountry[];
     noServiceCountryMap:INoServiceCountryMap;
 }
+
+if (!acceptMembership) return new Response(null,{status:404})
 
 const id = Astro.url.searchParams.get('id')
 if (!id) return Astro.redirect('/account/addresses')
