--- a/src/pages/account/new-address.astro
+++ b/src/pages/account/new-address.astro
@@ -5,12 +5,15 @@ import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type ICo
 import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
 // import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
+import { acceptMembership } from '@misc/env-vars';
 
 interface IApiResponse {
     userAlreadyHasAddress:boolean;
     countries:ICountry[];
     noServiceCountryMap:INoServiceCountryMap;
 }
+
+if (!acceptMembership) return new Response(null,{status:404})
 
 const isProduction = FM_ENV_MODE === 'production'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
