--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -63,6 +63,9 @@ Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
 
 console.log("csrf_token: ", csrftoken)
 console.log("sessionID: ", sessionID)
+console.log("initialSessionID: ", initialSessionID)
+console.log("headerCarouselOff: ", headerCarouselOff)
+console.log("headerCarouselOffKey: ", headerCarouselOffKey)
 ---
 
 <Layout {...{
