--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -58,7 +58,7 @@ const shoppingBagProp:IShoppingBagSidebarProp = {
     productDetailsMap:productMap
 }
 
-const csrftoken = crypto.randomUUID().toString() //getCookieValueWithKey(resp.headers.getSetCookie(),"csrf_token")
+const csrftoken = crypto.randomUUID() //getCookieValueWithKey(resp.headers.getSetCookie(),"csrf_token")
 Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
 
 console.log("csrf_token: ", csrftoken)
@@ -66,6 +66,7 @@ console.log("sessionID: ", sessionID)
 console.log("initialSessionID: ", initialSessionID)
 console.log("headerCarouselOff: ", headerCarouselOff)
 console.log("headerCarouselOffKey: ", headerCarouselOffKey)
+console.log(json)
 ---
 
 <Layout {...{
