--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -66,7 +66,7 @@ console.log("sessionID: ", sessionID)
 console.log("initialSessionID: ", initialSessionID)
 console.log("headerCarouselOff: ", headerCarouselOff)
 console.log("headerCarouselOffKey: ", headerCarouselOffKey)
-console.log(json)
+console.log(productMap['240001EHSS'])
 ---
 
 <Layout {...{
