--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -14,7 +14,7 @@ interface IApiResponse {
 
 const isProduction = FM_ENV_MODE === 'production'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
-const headerCarouselOff = !!Astro.cookies.get(headerCarouselOffKey)
+const headerCarouselOff = Astro.cookies.has(headerCarouselOffKey)
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/shop-page-init${Astro.url.search}`,{
     headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,!headerCarouselOff)
 })
