--- a/src/pages/account/new-address.astro
+++ b/src/pages/account/new-address.astro
@@ -17,7 +17,7 @@ if (!acceptMembership) return new Response(null,{status:404})
 
 const isProduction = FM_ENV_MODE === 'production'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
-const headerCarouselOff = !!Astro.cookies.get(headerCarouselOffKey)
+const headerCarouselOff = Astro.cookies.has(headerCarouselOffKey)
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/account-add-update-address-page-init/0`,{
     headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,!headerCarouselOff)
