--- a/src/pages/checkout.astro
+++ b/src/pages/checkout.astro
@@ -71,7 +71,7 @@ Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isProduction,expires
 
 const isCheckoutPage = Astro.url.pathname === '/checkout'
 
-const csrftoken = getCookieValueWithKey(resp.headers.getSetCookie(),"csrf_token")
+const csrftoken = crypto.randomUUID()
 Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
 ---
 
