--- a/src/pages/account/profile.astro
+++ b/src/pages/account/profile.astro
@@ -2,7 +2,7 @@
 import Layout from '@components/layout/index.astro'
 import AccountProfileContainer from '@components/account-profile/display-container.astro'
 import AccountProfileField from '@components/account-profile/display-field.astro'
-import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc'
+import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc'
 import EditorContainer from '@components/account-profile/editor-container.astro';
 import EditorPersonalInfo from '@components/account-profile/editor-personal-info.astro';
 import EditorPassword from '@components/account-profile/editor-password.astro';
