--- a/src/pages/sign-in.astro
+++ b/src/pages/sign-in.astro
@@ -1,5 +1,5 @@
 ---
-import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, whiteBtnClass, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
+import { httpRequestHeader, sessionCookieOption, whiteBtnClass, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import Layout from '../components/layout/index.astro';
 import SignInForm from '../components/sign-in-form/index.astro';
 import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
