--- a/src/pages/terms/[slug].astro
+++ b/src/pages/terms/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@components/layout/index.astro'
 import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
-import { getCookieValueWithKey, headerCarouselOffKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc'
+import { headerCarouselOffKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc'
 import Terms from '@components/terms/index.astro'
 
 let { slug } = Astro.params;
