--- a/src/pages/track-order.astro
+++ b/src/pages/track-order.astro
@@ -1,5 +1,5 @@
 ---
-import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp, type ITrackOrderResponse } from "@misc"
+import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp, type ITrackOrderResponse } from "@misc"
 import Layout from '@components/layout/index.astro'
 import TrackOrderForm from '@components/track-order/form.astro'
 import OrderContainer from "@components/track-order/order-container.astro";
