--- a/src/pages/account/addresses.astro
+++ b/src/pages/account/addresses.astro
@@ -2,7 +2,7 @@
 import NoAddress from '@components/account-addresses/no-address.astro';
 import Layout from '@components/layout/index.astro'
 import AddressList from '@components/account-addresses/address-list.astro';
-import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp, type IUserAddress } from '@misc'
+import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp, type IUserAddress } from '@misc'
 import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
 // import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
