--- a/src/pages/account/new-address.astro
+++ b/src/pages/account/new-address.astro
@@ -1,7 +1,7 @@
 ---
 import EditAddressForm from '@components/account-addresses/edit-address-form.astro';
 import Layout from '@components/layout/index.astro'
-import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type ICountry, type IMdwResponse, type INoServiceCountryMap, type IShoppingBagSidebarProp } from '@misc';
+import { httpRequestHeader, sessionCookieOption, type ICountry, type IMdwResponse, type INoServiceCountryMap, type IShoppingBagSidebarProp } from '@misc';
 import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
 // import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
