--- a/src/pages/sign-up.astro
+++ b/src/pages/sign-up.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../components/layout/index.astro';
 import SignUpForm from '../components/sign-up-form/index.astro';
-import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
+import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
 // import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
